--- a/Assignment7_BDL/docker-compose.yml
+++ b/Assignment7_BDL/docker-compose.yml
@@ -1,19 +1,54 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  web:
+  web1:
     build: ./src
     command: uvicorn app.main_api:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
       - ./src/:/app/
     ports:
-      - "8002:8000" #Change this for multiple ports, add cpu also
+      - "8101:8000"
     environment:
-      - DATABASE_URL=postgresql://hello_fastapi:hello_f
-#---> Verify that Prometheus is scraping the metrics from your FastAPI app by visiting <http://localhost:9090/targets> in your web browser. The FastAPI app target should be listed with a "UP" state.
-#With Prometheus now installed and configured in a Docker container, and your FastAPI app instrumented with Prometheus metrics, you are ready to move on to the next steps of integrating Grafana for visualization and analysis.astapi@db/hello_fastapi_dev
+      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
     depends_on:
       - db
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+
+  web2:
+    build: ./src
+    command: uvicorn app.main_api:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    volumes:
+      - ./src/:/app/
+    ports:
+      - "8102:8000"
+    environment:
+      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
+    depends_on:
+      - db
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+
+  web3:
+    build: ./src
+    command: uvicorn app.main_api:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    volumes:
+      - ./src/:/app/
+    ports:
+      - "8103:8000"
+    environment:
+      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
+    depends_on:
+      - db
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+
   db:
     image: postgres:13.1-alpine
     volumes:
