--- a/Assignment7_BDL/prometheus_data/prometheus.yml
+++ b/Assignment7_BDL/prometheus_data/prometheus.yml
@@ -27,4 +27,7 @@ scrape_configs:
   scrape_interval: 10s
   metrics_path: /metrics
   static_configs:
-    - targets: ['web:8000']
+    - targets: 
+          - 'host.docker.internal:8101' 
+          - 'host.docker.internal:8102' 
+          - 'host.docker.internal:8103'
