--- a/Assignment7_BDL/docker-compose.yml
+++ b/Assignment7_BDL/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8101:8000"
     environment:
-      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
+      - DATABASE_URL=postgresql://MNIST_fastapi:MNIST_fastapi@db/MNIST_fastapi_dev
     depends_on:
       - db
     deploy:
@@ -25,7 +25,7 @@ services:
     ports:
       - "8102:8000"
     environment:
-      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
+      - DATABASE_URL=postgresql://MNIST_fastapi:MNIST_fastapi@db/MNIST_fastapi_dev
     depends_on:
       - db
     deploy:
@@ -41,7 +41,7 @@ services:
     ports:
       - "8103:8000"
     environment:
-      - DATABASE_URL=postgresql://hello_fastapi:hello_fastapi@db/hello_fastapi_dev
+      - DATABASE_URL=postgresql://MNIST_fastapi:MNIST_fastapi@db/MNIST_fastapi_dev
     depends_on:
       - db
     deploy:
@@ -54,9 +54,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=hello_fastapi
-      - POSTGRES_PASSWORD=hello_fastapi
-      - POSTGRES_DB=hello_fastapi_dev
+      - POSTGRES_USER=MNIST_fastapi
+      - POSTGRES_PASSWORD=MNIST_fastapi
+      - POSTGRES_DB=MNIST_fastapi_dev
 
     ports:
       - "5432:5432"
@@ -97,4 +97,4 @@ volumes:
 
 networks:
   default: 
-    name: hello_fastapi
+    name: MNIST_fastapi
